force-app/main/default/objects/TMU_MTM_Trend__c.object
<CustomObject>
    <label>TMU/MTM趨勢</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Year__c</fullName>
        <label>年份</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>May_Last_Year__c</fullName>
        <label>去年5月</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>July_Last_Year__c</fullName>
        <label>去年7月</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>June_Last_Year__c</fullName>
        <label>去年6月</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>April_Last_Year__c</fullName>
        <label>去年4月</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>March_Last_Year__c</fullName>
        <label>去年3月</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>May_Current_Year__c</fullName>
        <label>今年5月</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>January_Last_Year__c</fullName>
        <label>去年1月</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>July_Current_Year__c</fullName>
        <label>今年7月</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>June_Current_Year__c</fullName>
        <label>今年6月</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>April_Current_Year__c</fullName>
        <label>今年4月</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>February_Last_Year__c</fullName>
        <label>去年2月</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>March_Current_Year__c</fullName>
        <label>今年3月</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>August_Current_Year__c</fullName>
        <label>今年8月</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>January_Current_Year__c</fullName>
        <label>今年1月</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>October_Current_Year__c</fullName>
        <label>今年10月</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>December_Current_Year__c</fullName>
        <label>今年12月</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>February_Current_Year__c</fullName>
        <label>今年2月</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>November_Current_Year__c</fullName>
        <label>今年11月</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>September_Current_Year__c</fullName>
        <label>今年9月</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>